# eunomia

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  backlog.md  checklist.md  gap_audit.md  rust-toolchain.toml
.config/: nextest.toml
crates/eunomia/: Cargo.toml
crates/eunomia-gpu/: Cargo.toml
crates/eunomia-gpu/src/: lib.rs  ops.rs  vector.rs
crates/eunomia/benches/: conversions.rs
crates/eunomia/src/: lib.rs  relative_eq.rs  traits.rs
crates/eunomia/src/casts/: primitives.rs  wrappers.rs
crates/eunomia/src/convert/: bulk.rs  kernel.rs  mod.rs
crates/eunomia/src/impls/: field.rs  mod.rs  primitives.rs  wrappers.rs
crates/eunomia/src/impls/primitives/: float.rs  mod.rs  numeric.rs  sealed.rs
crates/eunomia/src/impls/wrappers/: float.rs  mod.rs  numeric.rs
crates/eunomia/src/layout/: bytes.rs  marker.rs  mod.rs
crates/eunomia/src/ops/: floats.rs  ints.rs
crates/eunomia/src/packed/: cow.rs  mod.rs  rkyv.rs  slice.rs  vec.rs
crates/eunomia/src/packed/unpack/: arch.rs  conv.rs  dispatch.rs  mod.rs
crates/eunomia/src/packed/unpack/intrinsics/: avx2.rs  avx512.rs  mod.rs  neon.rs
crates/eunomia/src/relative_eq/: tests.rs
crates/eunomia/src/traits/: cast.rs  field.rs  float.rs  mod.rs  numeric.rs
crates/eunomia/src/types/: complex.rs  floats.rs  ints.rs  mod.rs
crates/eunomia/src/types/complex/: consts.rs  float.rs  mod.rs  numpy_element.rs  ops.rs  reduce.rs
crates/eunomia/tests/: cast.rs  complex_provider_contract.rs  float_element.rs  float_special.rs  integer_element.rs  layout.rs  native_f16_storage.rs  reduced_precision_convert.rs  subbyte_convert.rs
docs/adr/: 0001-eunomia-datatype-ssot.md  0002-native-complex-provider-cutover.md  0003-native-byte-layout-and-reduced-precision.md
