[package]
name = "eunomia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Atlas datatype law: the Single Source of Truth for numeric/scalar datatype vocabulary (scalars, complex, packed formats, conversions)"

[dependencies]
half = { workspace = true }
bytemuck = { workspace = true }
libm = { version = "0.2.8", default-features = false }
num-traits = { version = "0.2", default-features = false }
rkyv = { workspace = true, optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
numpy = { version = "0.27", optional = true }
pyo3 = { version = "0.27", optional = true }

[features]
default = ["std"]
std = []
rkyv = ["dep:rkyv", "rkyv/size_32"]
serde = ["dep:serde"]
# NumPy interop: `unsafe impl numpy::Element for Complex<f32|f64>` so the SSOT
# complex type is usable directly as a rust-numpy array element (Python bindings).
numpy = ["dep:numpy", "dep:pyo3", "std"]
